# GameMaster

./: .gitignore  README.md  npc_generator.py
BoardWyrm/: Dockerfile  app.py  fly.toml  parse.py  pyproject.toml
BoardWyrm/api_sample_resps/bgg/: game.xml  user_collection.xml
BoardWyrm/api_sample_resps/rpgg/: user_collection.xml
BoardWyrm/models/: bgg_collectable.py  bgg_game_details.py
BoardWyrm/static/src/: output.css
BoardWyrm/templates/: base.html.jinja  child.html.jinja  index.html  shelf.html.jinja
RootNPCGenerator/: app.py  npc_generator.py  root.json
RootNPCGenerator/templates/: npc_generator.html
root/: interface.py  npc_generator.py
root/static/css/: style.css
