[project]
name = "boardwyrm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "black>=25.1.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.1",
    "python-lsp-server>=1.12.2",
    "requests>=2.32.3",
]
